# customstream

./: .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  README.md  build-snap.sh  main.py  pyproject.toml  requirements.txt  test_server.py
app/: main.py
app/api/: routes.py
app/core/: config.py  database.py
app/models/: __init__.py  artifact.py  image.py  mirror_job.py  mixins.py  stream.py
app/schemas/: image.py  job.py  upstream.py
app/services/: custom.py  mirror.py  mirror_job.py  simplestream.py  storage.py  task_runner.py  upstream.py
app/utils/: enums.py  text.py
frontend/: index.html
frontend/assets/: main.js  styles.css
snap/: README.md  snapcraft.yaml
snap/local/hooks/: install
static/: index.html
