[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplestream-manager"
version = "0.1.0"
description = "MAAS simplestream mirroring and custom image manager"
authors = [{ name = "Simplestream Manager" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "httpx>=0.27.2",
  "sqlalchemy>=2.0.32",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.9",
  "pytest>=8.3.2",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "frontend", "README.md", "pyproject.toml"]
